src/objects/ContractAmendment__c.object
<CustomObject>
    <description>Cambridge Contract</description>
    <fields>
        <fullName>AmendmentChangesTermsRetroactively__c</fullName>
        <label>Amendment Changes Terms Retroactively</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AreTheRatesChanging__c</fullName>
        <label>Are the rates changing?</label>
        <picklist>
            <picklistValues>
                <fullName>Lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>TMN_Contract__c</referenceTo>
        <relationshipLabel>Contract Amendments</relationshipLabel>
        <relationshipName>ContractAmendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HaveTheAmountOfServicesChanged__c</fullName>
        <label>Have the amount of services changed?</label>
        <picklist>
            <picklistValues>
                <fullName>Decreased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IfYesWhat__c</fullName>
        <label>If Yes, What?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VPO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zzFRM__c</fullName>
        <formula>&apos;Contract Name&apos; &amp; BR() &amp;
Contract__r.Name &amp; BR() &amp; BR() &amp;


&apos;Number&apos; &amp; BR() &amp;
Contract__r.Contract_Number__c &amp; BR() &amp; BR() &amp;

&apos;Description&apos;  &amp; BR() &amp; BR() &amp;
BR() &amp;
BR() &amp;
BR() &amp;
BR() &amp;
BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzFRM</label>
        <type>Text</type>
    </fields>
    <label>Contract Amendment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Amendment  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Service_Changed_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( IfYesWhat__c )),ISPICKVAL(   AmendmentChangesTermsRetroactively__c ,&apos;No&apos;))</errorConditionFormula>
        <errorDisplayField>IfYesWhat__c</errorDisplayField>
        <errorMessage>This field is required to be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Changed_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( IfYesWhat__c ),ISPICKVAL(   AmendmentChangesTermsRetroactively__c ,&apos;Yes&apos;))</errorConditionFormula>
        <errorDisplayField>IfYesWhat__c</errorDisplayField>
        <errorMessage>This field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VPO_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(VPO__c),OR(TEXT(  AreTheRatesChanging__c )=&apos;Lower&apos;,TEXT(  HaveTheAmountOfServicesChanged__c )=&apos;Increased&apos;))</errorConditionFormula>
        <errorDisplayField>VPO__c</errorDisplayField>
        <errorMessage>A VPO is required when the rates have Lower or Services have Increased</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_VPO</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(  VPO__r.VPO__c )</errorConditionFormula>
        <errorDisplayField>VPO__c</errorDisplayField>
        <errorMessage>A valid VPO is required</errorMessage>
    </validationRules>
</CustomObject>